updated email link and added picture that will be below header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
-body {
-    background-color: green;
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/pittsburgh-skyline2.jpg");
+    background-size: cover;
+    background-position: center;
 }
