--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,26 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
+
+:root {
+     --primary-color: #2a607c;
+     --secondary-color:#d9dcd6;
+}
+
 body {
-    background-color: #d9dcd6;
+    background-color: var(--secondary-color);
 }
 /* Header styling start */
 header {
     padding: 20px 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
+    background-color: var(--primary-color);
 }
 
 header a {
     text-decoration: none;
-    color: #d9dcd6;
+    color: var(--secondary-color);
   }
 
 header h1 {
@@ -35,6 +45,20 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+
+header nav ul li a {
+    padding: 10px 15px;
+    font-weight: lighter;
+    font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  header nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
+  }
  
 /* Header styling end */
 .banner {
@@ -94,3 +118,51 @@ section div {
 }
 
 /* work box stylings end */
+/* footer styling start */
+footer {
+    background: var(--primary-color);
+    padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  footer h2 {
+    font-weight: bold;
+    margin: 0;
+    font-size: 36px;
+    color: var(--primary-color);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  footer a {
+    color: var(--primary-color);
+  }
+
+  footer nav {
+    margin: 7px 0;
+  }
+
+  footer nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+  }
+  
+  footer nav ul li a {
+    padding: 10px 15px;
+    font-weight: lighter;
+    font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  footer nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
+  }
+/* footer styling end */
