added pic for background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ section div {
     background-size: cover;
 }
 
-.robot-gladiators {
+.bingeBucket {
     background-image: url("../images/book-store.jpg");
     background-size: cover;
 }
