--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ section div {
 }
 
 .bingeBucket {
-    background-image: url("../images/book-store.jpg");
+    background-image: url("../images/overflowing-bucket2.jpg");
     background-size: cover;
 }
 
